Wow it actually looks like a website now!

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,13 @@
     <title>Boardgame Collection Manager</title>
 </head>
 <body>
+    <video autoplay muted loop id="myVideo">
+        <source src="../Cube Ball Looping Background.mp4" type="video/mp4">
+      </video>
     <header>
         <h2>Boardgame Collection Manager</h2>
         <nav>
-            <a href="./index.html">Boardgames</a>
+            <a href="./index.html">Boardgames</a><br>
             <a href="./addGame.html">Add Boardgame</a>
         </nav>
     </header>
